Closed Bug 370107 Opened 19 years ago Closed 19 years ago

nsScreenManagerCocoa::ScreenForRect won't match any screen when window partly offscreen

Categories

(Core :: Widget: Cocoa, defect)

x86
macOS
defect
Not set
normal

Tracking

()

RESOLVED FIXED

People

(Reporter: sylvain.pasche, Assigned: jaas)

References

Details

Attachments

(1 file, 2 obsolete files)

Maybe use a maximum intersection area algorithm like widget/gtk2 instead of NSContainsRect (or maybe there's already something in the API for this).
Summary: nsScreenManagerMac::ScreenForRect won't match any screen when window partly offscreen → nsScreenManagerCocoa::ScreenForRect won't match any screen when window partly offscreen
Attached patch version 1 (obsolete) — Splinter Review
Attachment #255397 - Flags: review?(joshmoz)
Blocks: 307371
Blocks: 370857
No longer blocks: 307371
Comment on attachment 255397 [details] [diff] [review] version 1 Patch no longer applies to current trunk. Can you update it please?
Attachment #255397 - Flags: review?(joshmoz)
Attached patch version 1, tip update (obsolete) — Splinter Review
Attachment #255397 - Attachment is obsolete: true
Attachment #256092 - Flags: review?(joshmoz)
Attachment #256092 - Flags: review?(joshmoz)
Attached patch version 2Splinter Review
I killed local variable nsScreenCocoa *sc which was unused. I guess one could even do the assignment inside NS_ADDREF, but that would be against existing style.
Attachment #256092 - Attachment is obsolete: true
Attachment #256097 - Flags: review?(joshmoz)
Attachment #256097 - Flags: review?(joshmoz) → review+
Attachment #256097 - Flags: superreview?(pavlov)
Attachment #256097 - Flags: superreview?(pavlov) → superreview+
fixed on trunk
Status: NEW → RESOLVED
Closed: 19 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: