nsScreenManagerCocoa::ScreenForRect won't match any screen when window partly offscreen. Patch by Sylvain Pasche. b=370107 r=josh sr=pav